# web-app-pyqt

./: README.md  pyproject.toml
WebAppInstaller/: __main__.py  qt_helper.py  ui_webwindow.py  useragents_workarounds.py  webwindow.py  webwindow.ui
webappinstaller/: __main__.py  app.py  main_window.py  mainwindow.ui  qt_helper.py  ui_mainwindow.py  ui_webwindow.py  useragents.py  webwindow.py  webwindow.ui
