[tool.poetry]
name = "webappinstaller"
version = "1.1.1"
description = ""
authors = ["PowerSnail <hj@powersnail.com>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.8"
PyQt5 = "^5.15.1"
fire = "^0.3.1"
PyQtWebEngine = "^5.15.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
