[tool.poetry]
name = "webappinstaller"
version = "1.1.2"
description = ""
authors = ["PowerSnail <hj@powersnail.com>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.4.0"
PyQt6 = "^6.2.3"
PyQt6-WebEngine = "^6.2.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
